--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "nodemon": "^3.1.7",
     "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.2"
+  },
+  "scripts": {
+    "start": "node main.js",
+    "dev": "node main.js"
   }
 }
