--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "mysql2": "^3.11.3",
     "nodemon": "^3.1.7",
     "sequelize": "^6.37.5",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "string-similarity": "^4.0.4"
   },
   "scripts": {
     "start": "node main.js",
