--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "express-session": "^1.18.1",
     "mariadb": "^3.4.0",
     "mysql2": "^3.11.3",
-    "nodemon": "^3.1.7",
     "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.2",
     "string-similarity": "^4.0.4"
@@ -16,5 +15,8 @@
   "scripts": {
     "start": "node main.js",
     "dev": "node main.js"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
