--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,9 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/node,windows,visualstudiocode
+
+# mariadb_data
+mariadb_data
+
+# docker-compose
+*.yml
